--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-skeleton-content": "^1.0.22",
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
