--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "6.0.0",
     "@react-native-community/slider": "3.0.3",
@@ -20,6 +21,8 @@
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "expo-video-player": "^1.6.1",
+    "install": "^0.13.0",
+    "npm": "^7.19.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
