--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-openanything": "0.0.6",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-skeleton-content": "^1.0.22",
     "react-native-skeleton-placeholder": "^4.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
