--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-openanything": "0.0.6",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
